--- a/css/style.css
+++ b/css/style.css
@@ -463,13 +463,16 @@ body.mobile-nav-active #mobile-nav-toggle {
 --------------------------------*/
 
 .section-header .section-title {
-  font-size: 38px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 40px;
   color: rgb(0, 0, 0);
   text-align: center;
   font-weight: 400;
+  font-style: oblique;
 }
 
 .section-header .section-description {
+  font-size: 25px;
   text-align: center;
   padding-bottom: 40px;
   color: rgb(0, 0, 0);
@@ -574,7 +577,6 @@ body.mobile-nav-active #mobile-nav-toggle {
 --------------------------------*/
 
 #features {
- /* background: #fff;*/
   padding: 60px 0 0 0;
   overflow: hidden;
 }
@@ -761,54 +763,6 @@ body.mobile-nav-active #mobile-nav-toggle {
 #team .member .social i {
   font-size: 18px;
   margin: 0 2px;
-}
-
-/* Gallery Section
---------------------------------*/
-
-#gallery {
-  background: #fff;
-  padding: 60px 0 0 0;
-  overflow: hidden;
-}
-
-#gallery .container-fluid {
-  padding: 0px;
-}
-
-#gallery .gallery-overlay {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  opacity: 1;
-  transition: all ease-in-out 0.4s;
-}
-
-#gallery .gallery-item {
-  overflow: hidden;
-  position: relative;
-  padding: 0;
-  vertical-align: middle;
-  text-align: center;
-}
-
-#gallery .gallery-item img {
-  transition: all ease-in-out 0.4s;
-  width: 100%;
-}
-
-#gallery .gallery-item:hover img {
-  -webkit-transform: scale(1.1);
-  transform: scale(1.1);
-}
-
-#gallery .gallery-item:hover .gallery-overlay {
-  opacity: 1;
-  background: rgba(0, 0, 0, 0.7);
 }
 
 /* Contact Section
